# turing_machine

./: CMakeLists.txt  main.c  turing.c  turing.h  visualizer.c  visualizer.h
tms/: bb2.tm  bb3.tm  bb4.tm  bb5c.tm  bb6c.tm
